--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Cursor Parking Lot",
-  "version": "1.0",
+  "version": "1.2",
   "description": "Creates a parking spot on every webpage to rest your cursor.",
+  "permissions": ["storage"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
